# Windows_monitor_dim_overlay

./: .gitignore  CHANGELOG.md  README.md  build.ps1  monitor_dim_overlay.py  pyproject.toml  requirements-dev.txt
monitor_dim/: __init__.py  app.py  config.py  controller.py  logic.py  models.py  overlay.py  settings_window.py  theme.py  winapi.py
packaging/: MonitorDimOverlay.iss  windows_version_info.txt
tests/: test_config.py  test_logic.py  test_models.py  test_winapi.py
tools/: build_icon.py
