[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "monitor-dim-overlay"
version = "2.1.2"
description = "Smart focus and dimming utility for Windows multi-monitor setups"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["PyQt6>=6.6,<7"]

[project.optional-dependencies]
dev = ["pytest>=8", "PyInstaller>=6.10", "Pillow>=10"]

[project.scripts]
monitor-dim-overlay = "monitor_dim.app:main"

[tool.setuptools.packages.find]
include = ["monitor_dim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
